# commandrex-cli

./: .gitignore  .pre-commit-config.yaml  README.md  TDD_WORKFLOW.md  TESTING.md  pyproject.toml  run_tests.py  test_prompt_builder.py
.github/workflows/: test.yml
commandrex/: __init__.py  __main__.py  main.py
commandrex/config/: api_manager.py  settings.py
commandrex/executor/: command_parser.py  platform_utils.py  platform_utils.py.bak  shell_manager.py
commandrex/models/: command_models.py
commandrex/translator/: openai_client.py  prompt_builder.py  prompt_builder.py.bak
commandrex/ui/: command_selector.py
commandrex/ui/animations/: universal.py
commandrex/utils/: logging.py  security.py  welcome_screen.py
commandrex/validator/: command_validator.py
docs/: environment-validation.md
tests/: __init__.py  conftest.py
tests/e2e/: test_cli_commands.py
tests/integration/: __init__.py  test_basic_workflow.py
tests/unit/: __init__.py  test_api_manager.py  test_cli_explain.py  test_cli_translate.py  test_command_parser.py  test_command_validator.py  test_entrypoint.py  test_logging.py  test_main.py  test_openai_client.py  test_platform_utils.py  test_prompt_builder.py  test_security.py  test_settings.py  test_shell_manager.py  test_welcome_screen.py
