[project]
name = "commandrex"
version = "0.1.1"
description = "A natural language interface for terminal commands"
authors = [
    {name = "Siddhant"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["terminal", "command-line", "natural-language", "openai", "ai", "cli", "shell"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Shells",
    "Topic :: Utilities"
]
dependencies = [
    "openai>=1.65.2,<2.0.0",
    "httpx>=0.28.1,<0.29.0",
    "pydantic>=2.10.6,<3.0.0",
    "keyring>=25.6.0,<26.0.0",
    "rich>=13.9.4,<14.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "typer>=0.15.2,<0.16.0"
]


[project.urls]
"Homepage" = "https://github.com/siddhantparadox/commandrex-cli"
"Bug Tracker" = "https://github.com/siddhantparadox/commandrex-cli/issues"
"Documentation" = "https://github.com/siddhantparadox/commandrex-cli#readme"

[project.scripts]
commandrex = "commandrex.main:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "A"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--cov=commandrex",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml",
    "--cov-fail-under=80",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow running tests",
    "network: Tests that require network access",
]
asyncio_mode = "auto"
timeout = 300

[tool.poetry.group.test.dependencies]
pytest = ">=8.4.1"
pytest-asyncio = ">=1.1.0"
pytest-cov = ">=6.2.1"
pytest-mock = ">=3.14.1"
pytest-timeout = ">=2.4.0"
pytest-xdist = ">=3.6.1"
freezegun = ">=1.5.1"
faker = ">=37.5.3"

[tool.poetry.group.dev.dependencies]
pre-commit = ">=3.6.0"
ruff = ">=0.1.0"
